--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,38 @@
 @charset "UTF-8";
 /* CSS Document */
-
-* {
-	font-family:Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif"
+/*skriftypeændringer!!----------------------------------------------------------------------*/
+body {
+	font-family: 'Noto Serif', serif;
 }
+
+h1 {
+	font-family: 'Lora', serif;
+}
+.reviews h3, .reviews h2, .covidbox h2, .volkommenbox h2, .pakke1 h3, .pakke2 h3, .pakke3 h3, .info h2  {
+	font-family: 'Lora', serif;
+}
+
+h4 {
+	font-size: 20px;
+	
+} 
+
+p {
+	font-size: 15px;
+	
+}
+
 
 header {
 	display: grid;
 	grid-template-columns: repeat(14, [col-start] 1fr);
+	grid-template-rows: 1fr 1fr;
 	padding-bottom: 20px;
 	padding-top: 20px;
 }
 
 .logo {
-	background-color: deeppink;
-	height: 60px;
+	grid-row: 1 / span 2;
 	grid-column: 7 / span 2;
 }
 .search {
@@ -22,45 +40,46 @@ header {
 }
 
 .search textarea {
+
 	width:100%
 }
 
 .head-icons {
-	grid-column: 12 / span 1;
+	grid-column: 12 / span 2;
 	display: grid;
-	grid-template-columns: repeat(2, [col-start] 1fr);
+	grid-template-columns: repeat(3, [col-start] auto);
 	align-items: center;
+	text-align: center;
 }
 
 .bruger {
 	font-size: 20px;
-	text-align: center;
 	grid-column: col-start / span 1;
 	color: black;
 	
 
 }
 .kurv {
-	
 	font-size: 20px;
-	text-align: center;
 	grid-column: 2 / span 1;
 	color: black;
 }
 
 .book {
-	background-color: blueviolet;
-	height: 30px;
-	grid-column: 13 / span 1;
+	grid-column: 3 / span 1;
+	
+}
+
+.bookknap {
+	color: #882A3F;
+	border:solid 1px #707070;
+	border-radius: 25px;
+	text-decoration: none;
+	padding: 10px;
 }
 
 
 
-
-
-
-
-* {font-family:Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif"}
 
 nav {
   overflow: hidden;
@@ -170,15 +189,17 @@ footer {
 	display: grid;
 	grid-template-columns: repeat(7, [col-start] 1fr);
 	padding-bottom: 50px;
+	margin-right: 5px;
 }
 .covidbox h2 {
 text-align: center;
 grid-column: 2 / span 5;
 }
 
-.covidbox p {
-text-align: center;
+.covidbox p, .covidbox h4 {
+
 grid-column: 2 / span 5;
+	margin: 5px;;
 }
 
 .covidbillede {
@@ -195,6 +216,7 @@ grid-column: 2 / span 5;
 	display: grid;
 	grid-template-columns: repeat(7, [col-start] 1fr);
 	padding-bottom: 50px;
+	margin-left: 5px;
 }
 .volkommenbox h2 {
 text-align: center;
@@ -202,9 +224,11 @@ grid-column: 2 / span 5;
 }
 
 .volkommenbox p {
-text-align: center;
 grid-column: 2 / span 5;
+margin: 0;
 }
+
+
 
 .volkommenbillede {
 	background-color: darkmagenta;
@@ -256,7 +280,13 @@ grid-column: 2 / span 5;
 
 
 
+.pris {
+	color:#882A3F;
+}
 
+.prisinfo h3 {
+	color:#882A3F;
+}
 
 /* bryllup------------------------------------------- */
 
@@ -369,11 +399,12 @@ grid-column: 2 / span 5;
 
 .pakkeA, .pakkeB{ 
 	
-	padding: 70px 100px 0px 100px;
+	padding: 70px 100px 60px 100px;
 	box-shadow: 10px 10px 20px 4px rgba(112,112,112,0.63);
 	margin: 70px 10px 60px 10px;
 	display: grid;
-	grid-template-rows: 4fr 1fr;
+	grid-template-rows: 1fr auto;
+	
 }
 
 .pakkec, .pakked{ 
@@ -403,11 +434,13 @@ grid-column: 2 / span 5;
 #eyelinepris1 { 
 	grid-column: col-start / span 1;
 	text-align: center;
+	
 }
 
 #eyelinepris2 {
 	grid-column: 2 / span 1;
 	text-align: center;
+	
 }
 
 
@@ -431,7 +464,13 @@ grid-column: 2 / span 5;
 .pakkepris {
 	grid-column: 2/ span 1;
 	text-align: center;
+	
 }
+
+#eyelinepris1 h3, #eyelinepris2 h3, .pakkepris h3 {
+	color: #882A3F;
+}
+
 
 
 
@@ -484,6 +523,7 @@ grid-column: 2 / span 5;
 	#manipris1, #manipris2, #manipris3, #manipris4, #manipris5, #manipris6, #manipris7 {
 	grid-column: 2/ span 1;
 	text-align: center;
+		color:#882A3F;
 
 }
 
@@ -554,6 +594,7 @@ grid-column: 2 / span 5;
 	#pedipris1, #pedipris2, #pedipris3,#pedipris4, #pedipris5, #pedipris6, #pedipris7 {
 	grid-column: 2/ span 1;
 	text-align: center;
+		color:#882A3F;
 
 }
 
@@ -617,6 +658,7 @@ grid-column: 2 / span 5;
 	#klippris1, #klippris2, #klippris3 {
 	grid-column: 2/ span 1;
 	text-align: center;
+		color:#882A3F;
 
 }
 
@@ -632,7 +674,7 @@ grid-column: 2 / span 5;
 	grid-column: 2/ span 6;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
-		grid-template-rows: repeat(6, [row-start] minmax(min-content, max-content));
+		grid-template-rows: repeat(6, [row-start] 1fr));
 	margin: 20px 20px 20px 0px;
 	
 }
@@ -653,11 +695,13 @@ grid-column: 2 / span 5;
 	#brynpris1, #brynpris2, #brynpris3, #brynpris4, #brynpris5, #brynpris6, #brynpris7, #brynpris8  {
 	grid-column: 2/ span 1;
 	text-align: center;
+	color:#882A3F;
 
 }
 
 #brynpris1, #brynpris6 {
-	grid-row: row-start/ span 1;
+	grid-row: 1/ span 1;
+	color:#882A3F;
 }
 
 #brynpris2 {
@@ -700,6 +744,7 @@ grid-column: 2 / span 5;
 	#vokspris1, #vokspris2, #vokspris3, #vokspris4, #vokspris5, #vokspris6, #vokspris7, #vokspris8, #vokspris9, #vokspris10, #vokspris11, #vokspris12, #vokspris13, #vokspris14, #vokspris15, #vokspris16, #vokspris17, #vokspris18, #vokspris19  {
 	grid-column: 2/ span 1;
 	text-align: center;
+		color:#882A3F;
 
 }
 
@@ -737,5 +782,17 @@ grid-column: 2 / span 5;
 }
 
 
+.mereinfo {
+	grid-column: 1/ span 14;
+	text-align: center;
+}
+
+.link {
+	
+	color:#D2A2A6
+}
 
 
+.tlf {
+	color:#D2A2A6;
+}
