--- a/styles.css
+++ b/styles.css
@@ -89,9 +89,134 @@ ul {
 	color:#D2A2A6
 }
 
+
+/* styling af navigationsmenuen på desktopversion ---------------------------------------------------*/
+nav {
+  overflow: hidden;
+  display:flex;
+  justify-content: space-around;
+}
+
+nav a {
+  float: left;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.styling-drop, .behandling-drop {
+  float: left;
+  overflow: hidden;
+}
+
+.styling-drop .dropknap1, .behandling-drop .dropknap2 {
+  cursor: pointer;
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: white;
+  margin: 0;
+}
+
+nav a:hover, .styling-drop:hover .dropknap1, .dropknap1:focus, .behandling-drop:hover .dropknap2, .dropknap2:focus {
+  background-color: #D2A2A6;
+}
+
+.indhold  {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.indhold a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.indhold a:hover, {
+  background-color: #D2A2A6;
+}
+
+.visboks {
+  display: block;
+}
+
+
+
+
+
+/* styling af header ---------------------------------------------------*/
+
+
+
+header {
+	display: grid;
+	grid-template-columns: repeat(4, [col-start] 1fr);
+	grid-template-rows: 1fr 1fr;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+	
+
+.logo {
+	grid-row: 1 / span 2;
+	grid-column: 2 / span 2;
+	text-align: center;
+}
+.search {
+	grid-column: 1 / span 4;
+	margin-right: 10px;
+	margin-left: 10px;
+	width:100%;
+	
+}
+
+.search input {
+
+	width:100%;
+}
+
+.head-icons {
+	grid-column: 4 / span 2;
+	display: grid;
+	grid-template-columns: repeat(3, [col-start] auto);
+	align-items: center;
+	text-align: center;
+}
+
+.bruger {
+	font-size: 20px;
+	grid-column: col-start / span 1;
+	color: black;
+	margin-bottom: 20px;
+	
+
+}
+.kurv {
+	font-size: 20px;
+	grid-column: 2 / span 1;
+	color: black;
+	margin-bottom: 20px;
+}
+
+.book {
+	grid-column: 1 / span 2;
+	
+}
+
+
 /* styling af footer ---------------------------------------------------*/
-
-
 footer {
 	text-align: center;
 	color: white;
@@ -142,6 +267,85 @@ footer {
 	
 }	
 
+/* slideshow styling---------------------------------------------------*/
+
+
+/* Slideshow container */
+.slideshow-container {
+grid-column: 1 / span 14;
+  width: 500px;
+  position: relative;
+  margin: auto;
+	margin-top: 30px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* placerer knapperne */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* pile får lidt baggrund når man holder musen over */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+/* prikkerne */
+.prikker {
+  text-align:center;
+	grid-column: 1 / span 14;
+	
+}
+
+.prik {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
 
 
 /* forside styling---------------------------------------------------*/
@@ -308,7 +512,7 @@ margin: 0;
 	box-shadow: 10px 10px 20px 4px rgba(112,112,112,0.63);
 	padding: 20px 40px 60px 40px;
 	display: grid;
-	grid-template-rows: 3fr 0.2fr ;
+	grid-template-rows: 3fr auto ;
 }
 
 
@@ -910,15 +1114,14 @@ p {
 
 /* styling af header ---------------------------------------------------*/
 
+
+	
 header {
 	display: grid;
 	grid-template-columns: repeat(14, [col-start] 1fr);
-	grid-template-rows: 1fr 1fr;
-	padding-bottom: 20px;
-	padding-top: 20px;
+
 }
 	
-
 .logo {
 	grid-row: 1 / span 2;
 	grid-column: 7 / span 2;
@@ -927,10 +1130,7 @@ header {
 	grid-column: 12 / span 2;
 }
 
-.search textarea {
 
-	width:100%
-}
 
 .head-icons {
 	grid-column: 12 / span 2;
@@ -943,14 +1143,14 @@ header {
 .bruger {
 	font-size: 20px;
 	grid-column: col-start / span 1;
-	color: black;
+	margin-bottom: 0px;
 	
 
 }
 .kurv {
 	font-size: 20px;
 	grid-column: 2 / span 1;
-	color: black;
+	margin-bottom: 0px;
 }
 
 .book {
@@ -959,70 +1159,6 @@ header {
 }
 
 	
-/* styling af navigationsmenuen på desktopversion ---------------------------------------------------*/
-nav {
-  overflow: hidden;
-  display:flex;
-  justify-content: space-around;
-}
-
-nav a {
-  float: left;
-  font-size: 16px;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.styling-drop, .behandling-drop {
-  float: left;
-  overflow: hidden;
-}
-
-.styling-drop .dropknap1, .behandling-drop .dropknap2 {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: white;
-  margin: 0;
-}
-
-nav a:hover, .styling-drop:hover .dropknap1, .dropknap1:focus, .behandling-drop:hover .dropknap2, .dropknap2:focus {
-  background-color: #D2A2A6;
-}
-
-.indhold  {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.indhold a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.indhold a:hover, {
-  background-color: #D2A2A6;
-}
-
-.visboks {
-  display: block;
-}
-
-
-
 
 /* wrapper på alle sider med grid til desktop ---------------------------------------------------*/
 
