--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 h1 {
-	font-size: 30px;
+	font-size: 25px;
 }
 
  h3 {
@@ -59,6 +59,18 @@ ul {
 	padding: 10px;
 }
 
+.bookknap:hover {
+	background-color:#D2A2A6;
+	
+}
+
+.booksec {
+	text-align: center;
+	grid-column: 1/ span 14;
+	margin-top: 20px;
+	
+}
+
 /*priser på alle side farveændring ------------*/	
 
 .pris {
@@ -92,69 +104,11 @@ ul {
 }
 
 
-/* styling af navigationsmenuen på desktopversion ---------------------------------------------------*/
+/* styling af navigat ---------------------------------------------------*/
+
 nav {
-  overflow: hidden;
-  display:flex;
-  justify-content: space-around;
+	display: none;
 }
-
-nav a {
-  float: left;
-  font-size: 16px;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.styling-drop, .behandling-drop {
-  float: left;
-  overflow: hidden;
-}
-
-.styling-drop .dropknap1, .behandling-drop .dropknap2 {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: black;
-  padding: 14px 16px;
-  background-color: white;
-  margin: 0;
-}
-
-nav a:hover, .styling-drop:hover .dropknap1, .dropknap1:focus, .behandling-drop:hover .dropknap2, .dropknap2:focus {
-  background-color: #D2A2A6;
-}
-
-.indhold  {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.indhold a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.indhold a:hover, {
-  background-color: #D2A2A6;
-}
-
-.visboks {
-  display: block;
-}
-
-
 
 
 
@@ -165,7 +119,6 @@ nav a:hover, .styling-drop:hover .dropknap1, .dropknap1:focus, .behandling-drop:
 header {
 	display: grid;
 	grid-template-columns: repeat(4, [col-start] 1fr);
-	grid-template-rows: 1fr 1fr;
 	padding-bottom: 20px;
 	padding-top: 20px;
 }
@@ -173,14 +126,20 @@ header {
 
 .logo {
 	grid-row: 1 / span 2;
-	grid-column: 2 / span 2;
-	text-align: center;
+	text-align: left;
+	margin-left: 30px;
+	
 }
+.logo a img {
+		width: 150px;
+	}
+
 .search {
 	grid-column: 1 / span 4;
-	margin-right: 10px;
-	margin-left: 10px;
-	width:100%;
+	margin-right: auto;
+	margin-left: auto;
+	width:80%;
+	
 	
 }
 
@@ -190,11 +149,13 @@ header {
 }
 
 .head-icons {
-	grid-column: 4 / span 2;
+	grid-column: 3/ span 2;
 	display: grid;
 	grid-template-columns: repeat(3, [col-start] auto);
 	align-items: center;
 	text-align: center;
+	
+	
 }
 
 .bruger {
@@ -252,7 +213,7 @@ footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-	font-size: 50px;
+font-size: 50px;
 }
 
 .herotxt h1 {
@@ -359,19 +320,25 @@ grid-column: 1 / span 14;
 	color:white;
 	background-color:rgba(255,255,255,0.40);
 	border-radius: 40px;
-	padding: 10px;
-	font-size: 20px;
+	padding: 5px;
+	font-size: 10px;
+	position: absolute;
+	top: 100%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
 	
+	
+
 }
 
 
 .covidbox {
 	background-color: #F6F6F6;
-	
 	display: grid;
 	grid-template-columns: repeat(7, [col-start] 1fr);
 	padding-bottom: 50px;
 	margin-right: 5px;
+	width: 100%;
 }
 .covidbox h2 {
 text-align: center;
@@ -409,14 +376,12 @@ margin: 0;
 }
 
 
-
 .volkommenbillede {
 text-align: center;
 	grid-column: 2 / span 5;
 	margin-top: 20px;
 	
 }
-
 
 
 /* anmeldelser styling-- på forside og kropbehandlinger-------------------------------------------------*/
@@ -591,7 +556,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 		grid-template-rows: repeat(6, [row-start] minmax(min-content, max-content));
-	margin: 20px 20px 20px 0px;
+	margin:0px;
 	
 }
 
@@ -600,7 +565,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 	grid-template-rows: repeat(8, [row-start] minmax(min-content, max-content));
-	margin: 20px 0px 20px 20px;
+	margin: 0;
 	
 }
 
@@ -663,7 +628,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 		grid-template-rows: repeat(5, [row-start] minmax(min-content, max-content));
-	margin: 20px 20px 20px 0px;
+	margin:0px;
 	
 }
 
@@ -672,7 +637,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 	grid-template-rows: repeat(5, [row-start] minmax(min-content, max-content));
-	margin: 20px 0px 20px 20px;
+	margin: 0;
 	
 }
 
@@ -728,7 +693,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 		grid-template-rows: repeat(2, [row-start] minmax(min-content, max-content));
-	margin: 20px 20px 20px 0px;
+	margin:0px;
 	
 }
 
@@ -737,7 +702,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 	grid-template-rows: repeat(1, [row-start] minmax(min-content, max-content));
-	margin: 20px 0px 20px 20px;
+	margin: 0px;
 	
 }
 
@@ -766,7 +731,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 		grid-template-rows: repeat(6, [row-start] 1fr));
-	margin: 20px 20px 20px 0px;
+	margin:0px;
 	
 }
 
@@ -775,7 +740,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 	grid-template-rows: repeat(6, [row-start] minmax(min-content, max-content));
-	margin: 20px 0px 20px 40px;	
+	margin:0;	
 	
 }
 
@@ -816,7 +781,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 		grid-template-rows: repeat(10, [row-start] minmax(min-content, max-content));
-	margin: 20px 20px 20px 0px;
+	margin:0px;
 	
 }
 
@@ -825,7 +790,7 @@ text-align: center;
 	display: grid;
 	grid-template-columns: 8fr 2fr;
 	grid-template-rows: repeat(9, [row-start] minmax(min-content, max-content));
-	margin: 20px 0px 20px 20px;	
+	margin:0;	
 }
 
 	#voksnavn1, #voksnavn2, #voksnavn3, #voksnavn4, #voksnavn5, #voksnavn6, #voksnavn7, #voksnavn8, #voksnavn9, #voksnavn10, #voksnavn11, #voksnavn12, #voksnavn13, #voksnavn14, #voksnavn15, #voksnavn16, #voksnavn17, #voksnavn18, #voksnavn19 {
@@ -1236,6 +1201,81 @@ p {
 }
 
 
+	
+/* nav ------------------------------------------- */	
+	
+	
+nav {
+  overflow: hidden;
+  display:flex;
+  justify-content: space-around;
+}
+
+nav a {
+  float: left;
+  font-size: 16px;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.styling-drop, .behandling-drop {
+  float: left;
+  overflow: hidden;
+}
+
+.styling-drop .dropknap1, .behandling-drop .dropknap2 {
+  cursor: pointer;
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: black;
+  padding: 14px 16px;
+  background-color: white;
+  margin: 0;
+}
+
+nav a:hover, .styling-drop:hover .dropknap1, .dropknap1:focus, .behandling-drop:hover .dropknap2, .dropknap2:focus {
+  background-color: #D2A2A6;
+}
+
+.indhold  {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.indhold a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.indhold a:hover, {
+  background-color: #D2A2A6;
+}
+
+.visboks {
+  display: block;
+}
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 /* styling af header ---------------------------------------------------*/
 
 
@@ -1249,7 +1289,16 @@ header {
 .logo {
 	grid-row: 1 / span 2;
 	grid-column: 7 / span 2;
+	margin: 0;
+	
+	
+	
 }
+	.logo a img {
+		width: 200px;
+	}
+
+	
 .search {
 	grid-column: 12 / span 2;
 }
@@ -1269,12 +1318,14 @@ header {
 	grid-column: col-start / span 1;
 	margin-bottom: 0px;
 	
+	
 
 }
 .kurv {
 	font-size: 20px;
 	grid-column: 2 / span 1;
 	margin-bottom: 0px;
+	
 }
 
 .book {
@@ -1323,6 +1374,12 @@ header {
 
 .volkommenbox {
 	grid-column: 8 / span 7;
+	}
+	
+	.kurserknap {
+		top: 120%;
+  	padding: 10px;
+	font-size: 20px;
 	}
 	
 
